[gd_scene load_steps=13 format=2]

[ext_resource path="res://assets/UI/SETTINGS.png" type="Texture" id=1]
[ext_resource path="res://assets/UI/CONTINUE.png" type="Texture" id=2]
[ext_resource path="res://assets/UI/100%.png" type="Texture" id=3]
[ext_resource path="res://assets/UI/NEWGAME.png" type="Texture" id=4]
[ext_resource path="res://assets/UI/CONTINUE_CLICK.png" type="Texture" id=5]
[ext_resource path="res://assets/UI/CONTINUE_H.png" type="Texture" id=6]
[ext_resource path="res://assets/UI/SETTINGS_H.png" type="Texture" id=7]
[ext_resource path="res://assets/UI/NEWGAME_CLICK.png" type="Texture" id=8]
[ext_resource path="res://assets/UI/SETTINGS_CLICK.png" type="Texture" id=9]
[ext_resource path="res://assets/UI/NEWGAME_H.png" type="Texture" id=10]
[ext_resource path="res://assets/UI/TITLE_MENU.gd" type="Script" id=11]
[ext_resource path="res://assets/UI/cursor.tscn" type="PackedScene" id=12]

[node name="Node" type="Node"]
script = ExtResource( 11 )

[node name="CenterContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -27.0
margin_top = -180.0
margin_right = 28.0
margin_bottom = 180.0
custom_constants/separation = 24
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="continue" type="TextureButton" parent="CenterContainer"]
margin_top = 136.0
margin_right = 55.0
margin_bottom = 149.0
shortcut_in_tooltip = false
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 6 )

[node name="new_game" type="TextureButton" parent="CenterContainer"]
margin_top = 173.0
margin_right = 55.0
margin_bottom = 186.0
shortcut_in_tooltip = false
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 8 )
texture_hover = ExtResource( 10 )

[node name="settings" type="TextureButton" parent="CenterContainer"]
margin_top = 210.0
margin_right = 55.0
margin_bottom = 223.0
shortcut_in_tooltip = false
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 9 )
texture_hover = ExtResource( 7 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 320, 180 )
scale = Vector2( 0.914286, 0.9 )
z_index = -1
texture = ExtResource( 3 )

[node name="cursor" parent="." instance=ExtResource( 12 )]
[connection signal="button_up" from="CenterContainer/continue" to="." method="_on_continue_button_up"]
[connection signal="button_up" from="CenterContainer/new_game" to="." method="_on_new_game_button_up"]
[connection signal="button_up" from="CenterContainer/settings" to="." method="_on_settings_button_up"]
